--- a/friends/src/components/App.scss
+++ b/friends/src/components/App.scss
@@ -1,3 +1,57 @@
+button {
+  background: transparent;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 5px 10px;
+}
+
 .App {
-  display: inherit;
+  position: relative;
+  width: 800px;
+  max-width: 100%;
+  min-height: 100vh;
+  display: flex;
+  > table {
+    padding-top: 2rem;
+    width: 67%;
+    align-self: center;
+    overflow: scroll;
+    thead {
+      padding: 1rem 0 1rem;
+      position: sticky;
+      top: 0;
+      background: white;
+      th {
+        padding: 1rem 0;
+        text-align: left;
+        font-size: 0.8rem;
+      }
+    }
+  }
+  > form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 33%;
+    position: sticky;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    .input-container {
+      width: min-content;
+      label {
+        display: block;
+        padding: 1rem 0;
+        font-size: 0.8rem;
+      }
+      input {
+        font-size: 1rem;
+        padding: 5px;
+        background: none;
+        border: none;
+        border-bottom: 1px solid black;
+      }
+    }
+  }
 }
